--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1 id="response"></h1>
-        <script src="js/script.js"></script>
+        <script src="js/email/script.js"></script>
     </body>
 </html>
