--- a/html/dice/index.html
+++ b/html/dice/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mail</title>
+        <title>Document</title>
     </head>
     <body>
-        <h1 id="response"></h1>
-        <script src="../../js/email/script.js"></script>
+        
+        <script src="../../js/dice/script.js"></script>
     </body>
 </html>
