--- a/html/email/index.html
+++ b/html/email/index.html
@@ -11,6 +11,11 @@
     <body>
         <h1 id="response"></h1>
         <i class="fas fa-10x fa-glass-cheers"></i>
+        <ul>
+            <li><a href="#">Call us</a></li>
+            <li><a href="#">Email us</a></li>
+            <li><a href="#">Chat us</a></li>
+        </ul>
         <script src="../../js/email/script.js"></script>
     </body>
 </html>
