--- a/dadi/index.html
+++ b/dadi/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-        <link rel="stylesheet" href="../../css/dice/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Dice</title>
     </head>
     <body>
         <h1 id="result"></h1>
         <i class="fas fa-10x fa-dice"></i>
-        <script src="../../js/dice/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
